src/objects/Catalog__c.object
<CustomObject>
    <description>Used with Siteforce Cirrus Computers Demo</description>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Additional_Details__c</fullName>
        <label>Item Additional Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Detail__c</fullName>
        <label>Item Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Features__c</fullName>
        <label>Item Features</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Image_Large__c</fullName>
        <label>Item Image Large</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Image__c</fullName>
        <label>Item Image</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Long_Description__c</fullName>
        <label>Item Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_MSRP__c</fullName>
        <label>Item MSRP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Model_Number__c</fullName>
        <label>Item Model Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Short_Description__c</fullName>
        <label>Item Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Specifications__c</fullName>
        <label>Item_Specifications</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Published to Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>